Fix Dark Mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,7 +34,7 @@
 }
 
 /* semantic color variables for this project */
-:root {
+/* :root {
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
     --color-background-mute: var(--vt-c-white-mute);
@@ -46,21 +46,21 @@
     --color-text: var(--vt-c-text-light-1);
 
     --section-gap: 160px;
+} */
+
+/* @media (prefers-color-scheme: dark) { */
+:root {
+    --color-background: var(--vt-c-black);
+    --color-background-soft: var(--vt-c-black-soft);
+    --color-background-mute: var(--vt-c-black-mute);
+
+    --color-border: var(--vt-c-divider-dark-2);
+    --color-border-hover: var(--vt-c-divider-dark-1);
+
+    --color-heading: var(--vt-c-text-dark-1);
+    --color-text: var(--vt-c-text-dark-2);
 }
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --color-background: var(--vt-c-black);
-        --color-background-soft: var(--vt-c-black-soft);
-        --color-background-mute: var(--vt-c-black-mute);
-
-        --color-border: var(--vt-c-divider-dark-2);
-        --color-border-hover: var(--vt-c-divider-dark-1);
-
-        --color-heading: var(--vt-c-text-dark-1);
-        --color-text: var(--vt-c-text-dark-2);
-    }
-}
+/* } */
 
 @supports (scrollbar-width: thin) {
     .scrollbar-thin {
@@ -112,13 +112,13 @@
 }
 
 body {
-    min-height: 100vh;
-    color: var(--color-text);
-    background: var(--color-background);
+    /* min-height: 100vh; */
+    /* color: var(--color-text); */
+    /* background: var(--color-background); */
     transition:
         color 0.5s,
         background-color 0.5s;
-    line-height: 1.6;
+    /* line-height: 1.6; */
     font-family:
         Inter,
         -apple-system,
@@ -132,16 +132,7 @@ body {
         'Droid Sans',
         'Helvetica Neue',
         sans-serif;
-    font-size: 15px;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-.dark {
-    color-scheme: dark;
-}
-
-html {
-    scrollbar-gutter: stable;
 }
